thrasyboulos/hydor/overlays/romaioi/attike/eupalinos/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eupalinos
spec:
  replicas: 1
  serviceName: eupalinos
  selector:
    matchLabels:
      app: eupalinos-attike
  template:
    metadata:
      labels:
        app: eupalinos-attike
        release: eupalinos
    spec:
      terminationGracePeriodSeconds: 3
      containers:
        - name: eupalinos-attike
          image: ghcr.io/odysseia-greek/eupalinos
          ports:
            - containerPort: 50060
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
